# tap-payspace

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap_payspace/: authenticator.py  client.py  streams.py  tap.py
tap_payspace/tests/: __init__.py  test_core.py
