[tool.poetry]
name = "tap-payspace"
version = "0.0.1"
description = "`tap-payspace` is a Singer tap for payspace, built with the Meltano Singer SDK."
authors = ["Herman Ewert"]
keywords = [
    "ELT",
    "payspace",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
singer-sdk = { version="^0.19.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
requests = "^2.28.1"
pyodata = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
isort = "^5.12.0"
types-requests = "^2.28.11.7"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_payspace"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-payspace = 'tap_payspace.tap:Tappayspace.cli'
